# advent-of-code

./: .gitignore  LICENSE  main.hs
2015/1/: main.hs
2015/2/: main.hs
2015/3/: main.hs
2015/4/: main.hs
2015/5/: main.hs
2015/6/: main.hs
2015/7/: main.hs  main.py
2015/8/: main.hs
2015/9/: main.hs
2016/: day1-test.py  day1.py  day2.py  day3.py  day4.py  day5.py
2016/1/: main.hs  main.py
2016/10/: main.hs
2016/2/: main.hs  main.py
2016/3/: main.hs  main.py
2016/4/: main.hs  main.py
2016/5/: main.hs  main.py
2016/6/: main.hs
2016/7/: main.hs
2016/8/: main.hs
2016/9/: main.hs
2018/1/: .gitignore  Cargo.toml  main.hs  run.py
2018/10/: main.py
2018/11/: main.py
2018/12/: main.py
2018/13/: main.py
2018/14/: main.py
2018/15/: main.py
2018/16/: main.py
2018/17/: main.py
2018/2/: Cargo.toml  main.hs  main.py
2018/3/: main.hs  main.py
2018/4/: main.hs  main.py  sorted.txt
2018/5/: main.hs  main.py
2018/6/: main.hs  main.py
2018/7/: main.hs  main.py
2018/8/: main.py  test.txt
2018/9/: Cargo.toml  main.hs  main.py
2019/1/: main.hs  main.py
2019/10/: main.py
2019/11/: main.py
2019/12/: main.py
2019/13/: main.py
2019/14/: main.py
2019/15/: main.py
2019/16/: main.py
2019/17/: main.py
2019/18/: main.py
2019/19/: main.py
2019/2/: main.hs  main.py
2019/21/: main.py
2019/3/: main.hs  main.py
2019/4/: main.hs  main.py
2019/5/: main.py
2019/6/: main.py
2019/7/: main.py
2019/8/: main.hs  main.py
2019/9/: main.py
2020/1/: main.hs
2020/10/: main.hs  main.py
2020/11/: main.hs  main.py  main2.hs
2020/12/: main.hs
2020/13/: main.hs
2020/14/: main.hs  main2.hs
2020/15/: main.hs  main.py
2020/16/: main.hs  test.txt
2020/17/: main.hs  main.py
2020/18/: main.hs
2020/19/: main.py
2020/2/: main.hs
2020/20/: main.hs  main.py
2020/21/: main.py
2020/22/: main.hs
2020/23/: main.hs
2020/24/: main.hs
2020/25/: main.hs
2020/3/: main.hs
2020/4/: main.hs
2020/5/: main.hs
2020/6/: main.hs
2020/7/: main.hs  main.py
2020/8/: main.hs
2020/9/: main.hs
2021/1/: main.hs
2021/10/: main.hs
2021/11/: main.hs
2021/12/: main.hs
2021/13/: main.hs
2021/14/: main.hs  main.py
2021/15/: main.hs  main2.hs
2021/16/: main.hs
2021/17/: main.hs
2021/18/: main.hs
2022/: aoc2022.cabal
2022/1/: main.hs
2022/2/: main.hs  main2.hs
2022/3/: main.hs
2022/4/: main.hs
2022/5/: main.hs
2022/6/: main.hs
2022/7/: main.hs
2022/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2022/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day2.hs  Day2b.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Lib.hs  Main.hs
2023/: aoc2023.cabal  cabal.project
2023/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2024/: aoc2024.cabal  cabal.project
(+35 files in other folders)
